--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -17,8 +17,7 @@
     <!-- link css -->
     <link rel="stylesheet" href="../css/style.css">
     <!-- link bootstrap 5.x -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <script src="https://kit.fontawesome.com/a7187feedf.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -29,11 +28,8 @@
         <!-- Navbar -->
         <nav id="navscroll" class="navbar navbar-expand-lg navbar-dark scrolling-nvbar fixed-top ">
             <div class="container-fluid">
-                <a class="navbar-brand" href="../index.html"> <img src="../image/logo/reftel_blanco.png" alt="logo"
-                        width=13% class="logoUbicacion"></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
-                    aria-label="Toggle navigation">
+                <a class="navbar-brand" href="../index.html"> <img src="../image/logo/reftel_blanco.png" alt="logo" width=13% class="logoUbicacion"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
@@ -75,31 +71,22 @@
         <br>
         <br>
 
-        <p class="texto-nosotros">Somos una empresa argentina creada en el año 2006 con el propósito de optimizar la
-            calidad del servicio que presta el arbitraje en nuestro país.</p>
+        <p class="texto-nosotros">Somos una empresa argentina creada en el año 2006 con el propósito de optimizar la calidad del servicio que presta el arbitraje en nuestro país.</p>
         <br>
 
         <p class="texto-nosotros"> Inicialmente comenzamos a brindar nuestros servicios de comunicación a la
             <b>Asociación
                 del
-                Fútbol</b> Argentino más precisamente a los árbitros de la Primera División A, quien gracias a las
-            últimas estadísticas resultó ser la quinta liga de fútbol a nivel importancia y competitividad en el mundo
-            según la FIFA.</p>
+                Fútbol</b> Argentino más precisamente a los árbitros de la Primera División A, quien gracias a las últimas estadísticas resultó ser la quinta liga de fútbol a nivel importancia y competitividad en el mundo según la FIFA.</p>
         <br>
-        <p class="texto-nosotros"> Gracias a la calidad de nuestro servicio, un año después, implementamos los INTERCOM
-            tanto en la Segunda División como en los partidos más relevantes de la tercera división en el futbol
-            Argentino, incluyendo también los torneos de verano que son
+        <p class="texto-nosotros"> Gracias a la calidad de nuestro servicio, un año después, implementamos los INTERCOM tanto en la Segunda División como en los partidos más relevantes de la tercera división en el futbol Argentino, incluyendo también los torneos de verano que son
             organizados en etapa de pretemporada de los equipos de la máxima división.</p>
         <br>
-        <p class="texto-nosotros">Luego de trece años ininterrumpidos de brindar nuestro servicio, en noviembre del
-            2019, REFTEL, fue adjudicada como <b>proveedora de los servicios VAR, por cuatro años.</b></p>
+        <p class="texto-nosotros">Luego de trece años ininterrumpidos de brindar nuestro servicio, en noviembre del 2019, REFTEL, fue adjudicada como <b>proveedora de los servicios VAR, por cuatro años.</b></p>
         <br>
-        <p class="texto-nosotros"> REFTEL fue homologada con <b>la más alta calificación por FIFA/IFAB</b> como una de
-            las tres empresas oficiales en el mundo están habilitadas para implementar el VAR. Siendo también la única
-            empresa en el continente Americano.</p>
+        <p class="texto-nosotros"> REFTEL fue homologada con <b>la más alta calificación por FIFA/IFAB</b> como una de las tres empresas oficiales en el mundo están habilitadas para implementar el VAR. Siendo también la única empresa en el continente Americano.</p>
         <br>
-        <p class="texto-nosotros"> Lideramos el desembarco del VAR en el fútbol Argentino, siendo la implementación de
-            tecnología de mayor magnitud hasta el momento en el futbol a nivel mundial.</p>
+        <p class="texto-nosotros"> Lideramos el desembarco del VAR en el fútbol Argentino, siendo la implementación de tecnología de mayor magnitud hasta el momento en el futbol a nivel mundial.</p>
         <br>
 
         <!-- Cards -->
@@ -113,8 +100,7 @@
                 <img src="../image/card1.PNG" class="card-img-top">
                 <br>
                 <h5 class="card-title"><b>Llega el VAR a la Argentina</b></h5>
-                <p class="card-text">El VAR empieza a emerger en el fútbol argentino. Llegará a la Liga Profesional de
-                    Fútbol como primer paso y luego el plan es expandirlo hacia la segunda división. </p>
+                <p class="card-text">El VAR empieza a emerger en el fútbol argentino. Llegará a la Liga Profesional de Fútbol como primer paso y luego el plan es expandirlo hacia la segunda división. </p>
                 <a href="https://www.lanacion.com.ar/deportes/futbol/var-futbol-argentino-arbitros-nid2548431/?gclid=CjwKCAjwsNiIBhBdEiwAJK4khgN1yohOp9xcRYESPYi8j3S4lnoJeOk4W5-NV6RxgyCTsTtBt3l0NxoC9u0QAvD_BwE
         " class="btn btn-dark">Leer Noticia</a>
             </div>
@@ -123,10 +109,8 @@
                 <img src="../image/card2.PNG" class="card-img-top">
                 <br>
                 <h5 class="card-title"><b>Avanza el VAR en la Argentina</b></h5>
-                <p class="card-text">Autoridades de AFA, Superliga, IFAB, FIFA y Conmebol se reunieron para desarrollar
-                    el Programa de Implementación y Asistencia del VAR en Argentina. </p>
-                <a href="https://www.ole.com.ar/futbol-primera/reunion-implementacion-var-argentina_0_idL99Ja3.htm"
-                    class="btn btn-dark">Leer Noticia</a>
+                <p class="card-text">Autoridades de AFA, Superliga, IFAB, FIFA y Conmebol se reunieron para desarrollar el Programa de Implementación y Asistencia del VAR en Argentina. </p>
+                <a href="https://www.ole.com.ar/futbol-primera/reunion-implementacion-var-argentina_0_idL99Ja3.htm" class="btn btn-dark">Leer Noticia</a>
             </div>
         </div>
 
@@ -135,18 +119,15 @@
 
         <footer class="container-fluid cajaFooter">
             <div class="centrar">
-                <img src="../image/logo_Reftel.jpeg" alt="logofooter" width="10%">
+                <img src="../image/logo_Reftel.jpeg" alt="logofooter" width="10%" class="logoFooter">
                 <p>+54 9 11 67805747</p>
                 <p>Basavilbaso 1378, CABA</p>
             </div>
         </footer>
         <!-- Js Bootstrap -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
         <!-- JQuery -->
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js"
-            integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
         <!-- mi JS -->
         <script src="../app.js"></script>
 </body>
