--- a/html/productos.html
+++ b/html/productos.html
@@ -264,7 +264,7 @@
 
         <footer class="container-fluid cajaFooter ">
             <div class="centrar ">
-                <img src="../image/logo_Reftel.jpeg " alt="logofooter " width="10% ">
+                <img src="../image/logo_Reftel.jpeg " alt="logofooter " width="10% " class="logoFooter">
                 <p>+54 9 11 67805747</p>
                 <p>Basavilbaso 1378, CABA</p>
             </div>
