--- a/html/productos.html
+++ b/html/productos.html
@@ -17,10 +17,11 @@
     <!-- link css -->
     <link rel="stylesheet" href="../css/style.css">
     <!-- link bootstrap 5.x -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <script src="https://kit.fontawesome.com/a7187feedf.js" crossorigin="anonymous"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
 </head>
 
 <body>
@@ -28,8 +29,11 @@
         <!-- Navbar -->
         <nav id="navscroll" class="navbar navbar-expand-lg navbar-dark scrolling-nvbar fixed-top ">
             <div class="container-fluid">
-                <a class="navbar-brand" href="../index.html"> <img src="../image/logo/reftel_blanco.png" alt="logo" width=13% class="logoUbicacion"></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+                <a class="navbar-brand" href="../index.html"> <img src="../image/logo/reftel_blanco.png" alt="logo"
+                        width=13% class="logoUbicacion"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
+                    aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
@@ -70,13 +74,20 @@
             <h2 class="titulo-intercomunicador">Intercomunicadores</h2>
             <div class="productos-ubicacion">
                 <div class="tamanio-textoIntercomunicador">
-                    <p>La velocidad con la que suceden las acciones en el mundo del deporte les exige a los protagonistas una gran capacidad de reacción para no cometer errores y ayudar a la dinámica del juego. Por eso, es fundamental una <b>comunicación profesional y de alta calidad</b>.
+                    <p>La velocidad con la que suceden las acciones en el mundo del deporte les exige a los
+                        protagonistas una gran capacidad de reacción para no cometer errores y ayudar a la dinámica del
+                        juego. Por eso, es fundamental una <b>comunicación profesional y de alta calidad</b>.
                         <br>
-                        <br> Nuestros equipos están totalmente adaptados al uso en ambiente ruidoso, interior y exterior: estadios, gimnasios, pabellones, pistas de hielo y cualquier otro tipo de contexto en donde pueda desarrollarse un deporte. <br>                        <br> El <b>sistema full-duplex</b> permite que los intérpretes estén constantemente comunicados, sin necesidad de que manipulen los equipos y de esta manera solo tengan que concentrarse en su rendimiento deportivo.
+                        <br> Nuestros equipos están totalmente adaptados al uso en ambiente ruidoso, interior y
+                        exterior: estadios, gimnasios, pabellones, pistas de hielo y cualquier otro tipo de contexto en
+                        donde pueda desarrollarse un deporte. <br> <br> El <b>sistema full-duplex</b> permite que los
+                        intérpretes estén constantemente comunicados, sin necesidad de que manipulen los equipos y de
+                        esta manera solo tengan que concentrarse en su rendimiento deportivo.
                     </p>
                 </div>
                 <div>
-                    <img class="img-intercomunicador" src="../image/intercomunicador1.png" alt="Intercomunicador" width=372px>
+                    <img class="img-intercomunicador" src="../image/intercomunicador1.png" alt="Intercomunicador"
+                        width=372px>
                 </div>
             </div>
         </section>
@@ -95,7 +106,8 @@
                                 <div class="col-md-10">
                                     <div class="card-body inicio">
                                         <h5 class="titulo-cardProductos">Audio de alta resolución</h5>
-                                        <p class="texto-cardProductos">HD Broadcast 16 kHz - Filtrado de ruidos - Posibilidad de ajustar el nivel del sonido del silbato</p>
+                                        <p class="texto-cardProductos">HD Broadcast 16 kHz - Filtrado de ruidos -
+                                            Posibilidad de ajustar el nivel del sonido del silbato</p>
                                         </p>
                                     </div>
                                 </div>
@@ -109,7 +121,10 @@
                                 <div class="col-md-10 ">
                                     <div class="card-body inicio">
                                         <h5 class="titulo-cardProductos">Sistema robusto</h5>
-                                        <p class="texto-cardProductos ">Grabador integrado para guardar conversaciones en tarjeta SD - Pasarela de audio compatible con cualquier equipo de Var - Enlace de radio aún más robusto entre el árbitro de campo y los árbitros del Var.
+                                        <p class="texto-cardProductos ">Grabador integrado para guardar conversaciones
+                                            en tarjeta SD - Pasarela de audio compatible con cualquier equipo de Var -
+                                            Enlace de radio aún más robusto entre el árbitro de campo y los árbitros del
+                                            Var.
                                         </p>
                                     </div>
                                 </div>
@@ -125,7 +140,10 @@
                                 <div class="col-md-10">
                                     <div class="card-body inicio ">
                                         <h5 class="titulo-cardProductos ">Facilidad de uso</h5>
-                                        <p class="texto-cardProductos ">Sencillo de desplegar: no necesita una estación de base - Cuenta con una pantalla tactil para una configuración más intuitiva - Sistema Plug and Play - Número ilimitado de usuarios - Terminales pequeños y ligeros
+                                        <p class="texto-cardProductos ">Sencillo de desplegar: no necesita una estación
+                                            de base - Cuenta con una pantalla tactil para una configuración más
+                                            intuitiva - Sistema Plug and Play - Número ilimitado de usuarios -
+                                            Terminales pequeños y ligeros
                                             - Alertas de síntesis de voz</p>
                                         </p>
                                     </div>
@@ -140,7 +158,9 @@
                                 <div class="col-md-10">
                                     <div class="card-body inicio ">
                                         <h5 class="titulo-cardProductos ">Seguridad</h5>
-                                        <p class="texto-cardProductos ">Sin riesgo a la desconexión accidental de auriculares - Mayor resistencia a las interferencias de radio - Comunicaciones encriptadas</p>
+                                        <p class="texto-cardProductos ">Sin riesgo a la desconexión accidental de
+                                            auriculares - Mayor resistencia a las interferencias de radio -
+                                            Comunicaciones encriptadas</p>
                                         </p>
                                     </div>
                                 </div>
@@ -165,7 +185,8 @@
                                 <div class="col-md-10">
                                     <div class="card-body inicio">
                                         <h5 class="titulo-cardProductos">Audio de alta resolución</h5>
-                                        <p class="texto-cardProductos">HD Broadcast 16 kHz - Filtrado de ruidos - Posibilidad de ajustar el nivel del sonido del silbato</p>
+                                        <p class="texto-cardProductos">HD Broadcast 16 kHz - Filtrado de ruidos -
+                                            Posibilidad de ajustar el nivel del sonido del silbato</p>
                                         </p>
                                     </div>
                                 </div>
@@ -181,7 +202,10 @@
                                 <div class="col-md-10 ">
                                     <div class="card-body inicio">
                                         <h5 class="titulo-cardProductos">Sistema robusto</h5>
-                                        <p class="texto-cardProductos ">Grabador integrado para guardar conversaciones en tarjeta SD - Pasarela de audio compatible con cualquier equipo de Var - Enlace de radio aún más robusto entre el árbitro de campo y los árbitros del Var.
+                                        <p class="texto-cardProductos ">Grabador integrado para guardar conversaciones
+                                            en tarjeta SD - Pasarela de audio compatible con cualquier equipo de Var -
+                                            Enlace de radio aún más robusto entre el árbitro de campo y los árbitros del
+                                            Var.
                                         </p>
                                     </div>
                                 </div>
@@ -197,7 +221,10 @@
                                 <div class="col-md-10">
                                     <div class="card-body inicio ">
                                         <h5 class="titulo-cardProductos ">Facilidad de uso</h5>
-                                        <p class="texto-cardProductos ">Sencillo de desplegar: no necesita una estación de base - Cuenta con una pantalla tactil para una configuración más intuitiva - Sistema Plug and Play - Número ilimitado de usuarios - Terminales pequeños y ligeros
+                                        <p class="texto-cardProductos ">Sencillo de desplegar: no necesita una estación
+                                            de base - Cuenta con una pantalla tactil para una configuración más
+                                            intuitiva - Sistema Plug and Play - Número ilimitado de usuarios -
+                                            Terminales pequeños y ligeros
                                             - Alertas de síntesis de voz</p>
                                         </p>
                                     </div>
@@ -214,7 +241,9 @@
                                 <div class="col-md-10">
                                     <div class="card-body inicio ">
                                         <h5 class="titulo-cardProductos ">Seguridad</h5>
-                                        <p class="texto-cardProductos ">Sin riesgo a la desconexión accidental de auriculares - Mayor resistencia a las interferencias de radio - Comunicaciones encriptadas</p>
+                                        <p class="texto-cardProductos ">Sin riesgo a la desconexión accidental de
+                                            auriculares - Mayor resistencia a las interferencias de radio -
+                                            Comunicaciones encriptadas</p>
                                         </p>
                                     </div>
                                 </div>
@@ -233,8 +262,10 @@
                 <h2 class="tituloVar">VAR</h2>
                 <div class="ubicacionVar">
                     <div class="tamanio-textoVar">
-                        <p>Contamos con la <b>herramienta más flexible del mercado</b> pudiendo adaptarse a la necesidad de nuestros clientes y cumpliendo con las exigencias más altas requeridas en el mercado.
-                            <br><br> Sabemos la importancia de un equipo altamente confiable. Es por eso que cuando elegimos nuestros productos, buscamos un cuidadoso equilibrio entre <b>la potencia, la
+                        <p>Contamos con la <b>herramienta más flexible del mercado</b> pudiendo adaptarse a la necesidad
+                            de nuestros clientes y cumpliendo con las exigencias más altas requeridas en el mercado.
+                            <br><br> Sabemos la importancia de un equipo altamente confiable. Es por eso que cuando
+                            elegimos nuestros productos, buscamos un cuidadoso equilibrio entre <b>la potencia, la
                                 confiabilidad y el
                                 costo.</b>
 
@@ -270,9 +301,12 @@
             </div>
         </footer>
         <!-- Js Bootstrap -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js " integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p " crossorigin="anonymous "></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js "
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p "
+            crossorigin="anonymous "></script>
         <!-- JQuery -->
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js " integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin=" anonymous "></script>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js "
+            integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin=" anonymous "></script>
         <!-- mi JS -->
         <script src="../app.js "></script>
 </body>
